--- a/themes/hugo-theme-stack/layouts/partials/widget/toc.html
+++ b/themes/hugo-theme-stack/layouts/partials/widget/toc.html
@@ -1,10 +1,9 @@
 {{ if (.Context.Scratch.Get "TOCEnabled") }}
     <section class="widget archives">
-        <div class="widget-icon">
+        <div class="widget-icon widget-title section-title">
             {{ partial "helper/icon" "hash" }}
+            <div>{{ T "article.tableOfContents" }}</div>
         </div>
-        <h2 class="widget-title section-title">{{ T "article.tableOfContents" }}</h2>
-        
         <div class="widget--toc">
             {{ .Context.TableOfContents }}
         </div>
